# opengostop

./: .gitignore  LICENSE  README  README.md  TODO.md  cards.py  check.py  multi_server.py  pyproject.toml  tt  users.py
html/: index.html
src/: card.py  gostop.py  img.py  score.py  user.py
src/gostop/: build_a_image.py  card.py  gostop.py  rule.py  score.py  user.py
src/html/: build_a_image.py  img.py  index.html  index2.html
test/: 3rd_pick_out_of_range.py  pick_sucess.py  test02.py  test_card.py  test_rule.py  tt1.py  tt2.py
test/.svn/: all-wcprops  entries
test/.svn/text-base/: 3rd_pick_out_of_range.py.svn-base  play_syntax_success.py.svn-base  test01.py.svn-base  test02.py.svn-base  tt.py.svn-base  tt2.py.svn-base
test/play_cmd/: play_test.py  tt
test/play_cmd/.svn/: all-wcprops  entries
test/play_cmd/.svn/text-base/: tt.sh.svn-base
