[tool.poetry]
name = "opengostop"
version = "0.1.0"
description = ""
authors = ["Youngmin Kim <ymkim92@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.4"
black = "^19.3b0"
mypy = "^0.740"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
