[tool.poetry]
name = "opengostop"
version = "0.1.0"
description = ""
authors = ["Youngmin Kim <ymkim92@gmail.com>"]
license = "MIT"

packages = [
    { include = "src/html" },
]

[tool.poetry.scripts]
gen_image = "src.html.build_a_image:build_image"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.1"
Pillow = "^8.3.1"

[tool.poetry.dev-dependencies]
pytest = "^3.4"
black = "^19.3b0"
mypy = "^0.740"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
